# cslam

./: CMakeLists.txt  package.xml
cmake/: FindONNXRuntime.cmake
cslam/: algebraic_connectivity_maximization.py  broker.py  global_descriptor_loop_closure_detection.py  loop_closure_detection_node.py  loop_closure_sparse_matching.py  neighbors_manager.py  nns_matching.py
cslam/mac/: mac.py  utils.py
cslam/vpr/: cosplace.py  netvlad.py
cslam/vpr/cosplace_utils/: export_cosplace.py  hubconf.py  layers.py  network.py  optimize.py  report_dynamo_export.sarif  utils.py
include/cslam/back_end/: decentralized_pgo.h  gtsam_utils.h
include/cslam/back_end/utils/: logger.h  simulated_rendezvous.h
include/cslam/front_end/: map_manager.h  rgbd_handler.h  stereo_handler.h
launch/: cslam.launch.py  cslam_lidar.launch.py  cslam_separated.launch.py  cslam_stereo.launch.py  cslam_stereo_separated.launch.py
mot/: cropped_desc_graph.py
src/back_end/: decentralized_pgo.cpp  global_descriptor.cpp  global_descriptor_component.cpp  gtsam_utils.cpp  pose_graph_manager_component.cpp  pose_graph_manager_node.cpp
src/back_end/utils/: logger.cpp  simulated_rendezvous.cpp
src/front_end/: global_descriptor_component.cpp  map_manager.cpp  map_manager_component.cpp  map_manager_node.cpp  rgbd_handler.cpp  stereo_handler.cpp
tests/: cosplace_test  test_global.cpp  test_sparse_matching.py
